Reworked the maven a bit to use a bom. Tried to make the annos work but didn't change anyting, really.